--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "apicache": "^1.2.1",
     "express": "^4.16.3",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "request": "^2.85.0"
   },
   "devDependencies": {
